<resources>
    <string name="app_name">TakeCare</string>
    <string name="name"> Name </string>
    <string name="pfeil_zur_ck"> Pfeil Zurück </string>
    <string name="umgebung"> Umgebung </string>
    <string name="dashboard">Dashboard</string>
    <string name="konto"> Konto </string>
    <string name="environment_radius_text">Umkreis:</string>
    <string name="_1_km">1 km</string>
    <string name="title_activity_login">Einloggen</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Einloggen oder registrieren</string>
    <string name="action_sign_in_short">Einloggen</string>
    <string name="action_register_short">Registrieren</string>
    <string name="welcome">"Willkommen "</string>
    <string name="invalid_username">Kein gültiger Nutzername</string>
    <string name="invalid_password">Das Passwort braucht mind. 6 Zeichen</string>
    <string name="login_failed">"Login fehlgeschlagen"</string>
    <string name="edit_location_radius">Umkreis wählen</string>
    <string name="set_location_radius">Umkreis festlegen</string>
    <string name="taskName">Aufgabenbezeichnung</string>
    <string name="taskDescription">Aufgabenbeschreibung</string>
    <string name="distanceToExercise">500 Meter entfernt</string>
    <string name="sort_by_distance">Nach Entfernung sortieren</string>
    <string name="aufgabe_anlegen">Aufgabe anlegen</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="zeitraum">Zeitraum</string>
    <string name="w_chentlich">Wöchentlich</string>
    <string name="kategorie">Kategorie</string>
    <string name="zusatzinformationen">Zusatzinformationen</string>
    <string name="userbild"> userbild </string>
    <string name="level"> Level </string>
    <string name="titel"> Titel</string>
    <string name="menu">Menu</string>
    <string name="takecare">TakeCare</string>
    <string name="wiederholend">Wiederholend</string>
    <string name="meiste_punkte">Meiste Sterne</string>
    <string name="am_dringesten">Dringendste</string>
    <string name="am_neusten">Neueste</string>
    <string name="am_n_chsten">Näheste</string>
    <string name="searchForAddress">Aufgabenort suchen</string>
    <string name="setAddress">Aufgabenort festlegen</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="datenschutz">Datenschutz</string>
    <string name="impressum">Impressum</string>
    <string name="settings">Einstellungen</string>
    <string name="kategorien">Kategorie:</string>
    <string name="ver_ffentlichen">Veröffentlichen</string>
    <string name="abschliessen">Aufgabe abschließen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_profile">Über mich</string>
    <string name="profil">Profil</string>
    <string name="login_register">Anmelden / Registrieren</string>
    <string name="notasksfound">Keine Aufgaben in Ihrer Umgebung gefunden!</string>
    <string name="notasksfoundtext">Erstellen Sie als erste Person eine Aufgabe!\n\nHaben Sie schon versucht den Umkreis zu vergrößern?</string>
    <string name="prompt_username">Nutzername</string>
    <string name="savechanges">Änderungen speichern</string>
    <string name="umkreis_vergr_ern">Umkreis erhöhen</string>
</resources>
