<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/logoPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageVIew"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:src="@drawable/splash" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="300dp"
        android:id="@+id/layoutInput"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedcorners"
        android:padding="20dp"
        android:elevation="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/prompt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/username"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_baseline_account_circle_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/prompt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <CheckBox
            android:layout_marginTop="10dp"
            android:id="@+id/saveLoginCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save Login?" />

        <Button
            android:id="@+id/login"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:text="@string/action_sign_in_short"
            android:backgroundTint="@color/logoPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/register"
            android:enabled="false"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/action_register_short"
            android:backgroundTint="@color/logoPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0.3" />
</RelativeLayout>