<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.DashboardFragment">
    <!--    used template https://github.com/theindianappguy/SampleProfileUi-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="240dp"-->
<!--        android:background="@color/logoPrimary">-->

<!--    </LinearLayout>-->

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/EnviromentDrawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.amar.library.ui.StickyScrollView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:stickyHeader="@+id/topbar">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">
                    <!--Top Header Layout-->
                    <LinearLayout
                        android:id="@+id/topbar"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@color/logoPrimary"
                        android:layout_alignParentTop="true"
                        android:gravity="center_vertical"
                        android:padding="2dp">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/menuButton"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:clickable="true"
                            android:elevation="0dp"
                            app:backgroundTint="#FFFFFF"
                            app:fabCustomSize="40dp"
                            app:srcCompat="@drawable/ic_baseline_menu_24" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/umgebung"
                            android:textColor="#FFFFFF"
                            android:textSize="24sp"
                            android:textStyle="normal" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <RelativeLayout
                            android:layout_width="50dp"
                            android:layout_height="50dp">


                            <com.google.android.material.floatingactionbutton.FloatingActionButton
                                android:id="@+id/edit_location_radius"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:clickable="true"
                                android:elevation="0dp"
                                android:title="@string/edit_location_radius"
                                app:backgroundTint="#FFFFFF"
                                app:fabCustomSize="40dp"
                                app:srcCompat="@drawable/ic_baseline_edit_location_24" />

                            <!--            <com.google.android.material.button.MaterialButton-->
                            <!--                android:id="@+id/SettingsButton"-->
                            <!--                android:backgroundTint="@color/white"-->
                            <!--                android:elevation="0dp"-->
                            <!--                app:icon="@drawable/ic_baseline_settings_24"-->
                            <!--                app:iconGravity="textStart"-->
                            <!--                android:title="@string/settings"-->
                            <!--                android:layout_height="40dp"-->
                            <!--                android:layout_width="40dp"/>-->

                            <!--            <ImageView-->
                            <!--                android:layout_width="40dp"-->
                            <!--                android:layout_height="40dp"-->
                            <!--                android:layout_centerInParent="true"-->
                            <!--                android:padding="6dp"-->
                            <!--                android:src="@drawable/ic_notifications_white_24dp" />-->

                            <!--            <ImageView-->
                            <!--                android:layout_width="20dp"-->
                            <!--                android:layout_height="20dp"-->
                            <!--                android:layout_alignParentTop="true"-->
                            <!--                android:layout_alignParentEnd="true"-->
                            <!--                android:layout_margin="8dp"-->
                            <!--                android:padding="4dp"-->
                            <!--                android:src="@drawable/circleyellowfil" />-->
                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/noTasksFound"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFFFF"
                        android:visibility="gone"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:animateLayoutChanges="true"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/logoPrimary"
                            app:cardCornerRadius="6dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_gravity="center"
                                android:layout_width="250dp"
                                android:layout_height="150dp"
                                android:elevation="15dp"
                                android:layout_weight="1"
                                android:src="@drawable/takecare" />

                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/notasksfound"
                                android:textAlignment="center"
                                android:textColor="#000000"
                                android:textSize="19sp"
                                android:textStyle="bold"
                                tools:text="@string/notasksfound" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/notasksfoundtext"
                                android:textAlignment="center"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                tools:text="@string/notasksfoundtext" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/EmptyTasksAdjustRadius"
                                style="@style/Widget.MaterialComponents.Button.Icon"
                                android:layout_marginTop="50dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/logoPrimary"
                                android:visibility="gone"
                                android:text="@string/umkreis_vergr_ern"
                                app:icon="@drawable/ic_baseline_edit_location_24"
                                app:iconTint="@android:color/white" />
                        </LinearLayout>


                    </LinearLayout>

                    <View
                        android:id="@+id/swipeView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/EnviromentTasksEmpty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="Es scheint so als wären keine offenen Aufgaben mit diesen Einstellungen in ihrer Nähe."
                        android:textSize="15sp"
                        android:visibility="gone" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/environment_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_task" />


                </LinearLayout>
            </com.amar.library.ui.StickyScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <!--        <LinearLayout-->
        <!--            android:id="@+id/filterView2"-->
        <!--            android:layout_width="300dp"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:background="@android:drawable/dialog_holo_light_frame"-->
        <!--            android:orientation="vertical"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toStartOf="parent">-->

        <!--            <TextView-->
        <!--                android:id="@+id/KategorieFilterMenuText"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="20dp"-->
        <!--                android:layout_marginTop="10dp"-->
        <!--                android:text="@string/kategorien"-->
        <!--                android:textSize="20sp" />-->

        <!--            <Spinner-->
        <!--                android:id="@+id/KategorieMenuSpinner1"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="10dp"-->
        <!--                android:layout_marginTop="25dp"-->
        <!--                android:dropDownWidth="wrap_content"-->
        <!--                android:spinnerMode="dialog"-->
        <!--                android:visibility="visible"-->
        <!--                app:layout_constraintStart_toEndOf="parent"-->
        <!--                app:layout_constraintTop_toTopOf="parent"></Spinner>-->

        <!--            <View-->
        <!--                android:id="@+id/MenuSpinnerView"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="1dp"-->
        <!--                android:layout_marginTop="30dp"-->
        <!--                android:background="@android:color/darker_gray"-->
        <!--                app:layout_constraintEnd_toStartOf="parent"-->
        <!--                app:layout_constraintTop_toBottomOf="@id/KategorieMenuSpinner1"></View>-->


        <!--            <View-->
        <!--                android:id="@+id/FilterMenuView"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="1dp"-->
        <!--                android:layout_marginTop="30dp"-->
        <!--                android:background="@android:color/darker_gray"-->
        <!--                app:layout_constraintStart_toStartOf="parent"-->
        <!--                app:layout_constraintTop_toBottomOf="@id/SortingButtons"></View>-->

        <!--            <androidx.appcompat.widget.AppCompatCheckBox-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="10dp"-->
        <!--                android:layout_marginTop="20dp"-->
        <!--                android:text="@string/wiederholend"-->
        <!--                android:textSize="25sp">-->


        <!--            </androidx.appcompat.widget.AppCompatCheckBox>-->

        <!--        </LinearLayout>-->

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/filterView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|left"
            app:menu="@menu/menu_envriroment_filter">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signinFirstTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:gravity="center"
                    android:text="@string/login_register"
                    android:visibility="gone"
                    app:icon="@drawable/ic_baseline_supervised_user_circle_24" />
            </LinearLayout>
        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"></ProgressBar>

</RelativeLayout>
